--- a/Automatic Label Generation(Pleural Effusion).ipynb
+++ b/Automatic Label Generation(Pleural Effusion).ipynb
@@ -2695,23 +2695,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(50720, 3)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_output[df_output['PE Label'] == 1].shape"
+    "PE_pos_long_report = [text.replace('pleural effusion','*** PLEURAL EFFUSION ***').replace('blunting','*** BLUNTING ***') for text in (df_output[(df_output['PE Label'] == 1)]['Report']) if len(text.split())> 60]\n",
+    "\n",
+    "pd.Series(PE_pos_long_report).to_csv('PE Positive Reports Highlighted.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
