--- a/torturous aorta.ipynb
+++ b/torturous aorta.ipynb
@@ -61,17 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# These pattern was design by observation the reports above\n",
-    "pattern = r'(?i)(tortuo[^\\.]*?aort(a|ic)|aort(a|ic)[^\\.]*?tortuo\\w+)'"
+    "pattern = r'(?i)(tortuo[^\\.]*?aort(a|ic)|aort(a|ic)[^\\.]*?tortuo\\w+|HCVD|H\\.C\\.V\\.D)'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -145,8 +145,8 @@
        "    <tr>\n",
        "      <th>曾水權</th>\n",
        "      <td>939</td>\n",
-       "      <td>590.0</td>\n",
-       "      <td>0.628328</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>0.644302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>歐陽翊潔</th>\n",
@@ -160,24 +160,6 @@
        "      <td>43.0</td>\n",
        "      <td>0.443299</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>陳友強</th>\n",
-       "      <td>305</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>0.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>賴彥君</th>\n",
-       "      <td>947</td>\n",
-       "      <td>326.0</td>\n",
-       "      <td>0.344245</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>陳郁惟</th>\n",
-       "      <td>52</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>0.326923</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -186,28 +168,25 @@
        "      workload  count     ratio\n",
        "name                           \n",
        "謝麗莎         90   68.0  0.755556\n",
-       "曾水權        939  590.0  0.628328\n",
+       "曾水權        939  605.0  0.644302\n",
        "歐陽翊潔       171   93.0  0.543860\n",
-       "王裕仁         97   43.0  0.443299\n",
-       "陳友強        305  122.0  0.400000\n",
-       "賴彥君        947  326.0  0.344245\n",
-       "陳郁惟         52   17.0  0.326923"
+       "王裕仁         97   43.0  0.443299"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "threshold = 0.3\n",
+    "threshold = 0.4\n",
     "profile = doctor_profile(subset, pattern)\n",
     "sensitive_doctors = profile[(profile['ratio'] > threshold) & (profile['workload'] > 50)]; sensitive_doctors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeroyang/.local/share/virtualenvs/qrabbit-nlp-2666-b4E/lib/python3.6/site-packages/ipykernel_launcher.py:3: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "84835"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "full = pd.read_hdf(os.path.join(DATASTORE, 'store.h5'), '/femh').fillna('')\n",
     "relaible_reports = full[full['CONFIRMDR'].isin(sensitive_doctors)]\n",
@@ -228,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "正樣本:84835, 負樣本:21215\n"
+     ]
+    }
+   ],
    "source": [
     "pos_neg = pd.merge(relaible_reports, positive_reports, how='outer', left_on='ACCNO', right_index=True)\n",
     "pos_neg['label'].fillna(0, inplace=True)\n",
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
