--- a/femh_subset.ipynb
+++ b/femh_subset.ipynb
@@ -102,6 +102,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Chest CT 母體new2 2012-20180620.csv to HDFstore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/Volumes/QRABIT-NTSF/Chest CT 母體new2 2012-20180620.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "femh_ct = pd.read_csv(os.path.join(FULL_DATASTORE, 'Chest CT 母體new2 2012-20180620.csv'), index_col=0, encoding='cp950')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeroyang/.local/share/virtualenvs/qrabbit-nlp-2666-b4E/lib/python3.6/site-packages/pandas/core/generic.py:1996: PerformanceWarning: \n",
+      "your performance may suffer as PyTables will pickle object types that it cannot\n",
+      "map directly to c-types [inferred_type->mixed,key->block1_values] [items->['EXAMDATE', 'EXAMNAME', 'PATID', 'ORDERFROM', 'ORDERDEPT', 'WARD', 'CONFIRMDR', 'BODYPART', 'MACHINEID', 'FINDINGS', 'IMPRESSIONS']]\n",
+      "\n",
+      "  return pytables.to_hdf(path_or_buf, key, self, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "femh_ct.to_hdf(os.path.join(DATASTORE, 'store.h5'), '/femh_ct')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sampling from CT reports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeroyang/.local/share/virtualenvs/qrabbit-nlp-2666-b4E/lib/python3.6/site-packages/pandas/core/generic.py:1996: PerformanceWarning: \n",
+      "your performance may suffer as PyTables will pickle object types that it cannot\n",
+      "map directly to c-types [inferred_type->mixed,key->block1_values] [items->['EXAMDATE', 'EXAMNAME', 'PATID', 'ORDERFROM', 'ORDERDEPT', 'WARD', 'CONFIRMDR', 'BODYPART', 'MACHINEID', 'FINDINGS', 'IMPRESSIONS']]\n",
+      "\n",
+      "  return pytables.to_hdf(path_or_buf, key, self, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "subset_ct = femh_ct.sample(5000)\n",
+    "subset_ct.to_hdf(os.path.join(DATASTORE, 'store.h5'), '/subset_ct')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
