--- a/aortic_dissection.ipynb
+++ b/aortic_dissection.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'nlp_dissection_ct.csv'"
+    "file_name = 'nlp_aortic_dissection_ct.csv'"
    ]
   },
   {
