--- a/femh_subset.ipynb
+++ b/femh_subset.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -47,8 +49,8 @@
     }
    ],
    "source": [
-    "femh = pd.read_excel(os.path.join(FULL_DATASTORE, '母體資料庫 53萬.xlsx'), index_col=0)\n",
-    "femh = femh.drop_duplicates() # Remove duplicated data, why there are duplicated data? I don't know\n",
+    "femh = pd.read_excel(os.path.join(FULL_DATASTORE, '母體資料庫 53萬.xlsx'))\n",
+    "femh = femh.drop_duplicates('ACCNO').set_index('ACCNO') # Remove duplicated data, why there are duplicated data? I don't know\n",
     "femh.to_hdf(os.path.join(DATASTORE, 'store.h5'), '/femh')"
    ]
   },
@@ -63,19 +65,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jeroyang/.local/share/virtualenvs/qrabbit-nlp-2666-b4E/lib/python3.6/site-packages/pandas/core/generic.py:1996: PerformanceWarning: \n",
-      "your performance may suffer as PyTables will pickle object types that it cannot\n",
-      "map directly to c-types [inferred_type->mixed-integer,key->block2_values] [items->['EXAMDATE', 'EXAMNAME', 'PATID', 'ORDERFROM', 'ORDERDEPT', 'WARD', 'CONFIRMDR', 'BODYPART', 'MACHINEID', 'FINDINGS', 'IMPRESSIONS']]\n",
-      "\n",
-      "  return pytables.to_hdf(path_or_buf, key, self, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subset = femh.sample(10000, random_state=0)\n",
     "subset.to_hdf(os.path.join(DATASTORE, 'store.h5'), '/subset')"
@@ -90,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('/Volumes/QRABIT-NTSF/Chest CT 母體new2 2012-20180620.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,19 +139,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jeroyang/.local/share/virtualenvs/qrabbit-nlp-2666-b4E/lib/python3.6/site-packages/pandas/core/generic.py:1996: PerformanceWarning: \n",
-      "your performance may suffer as PyTables will pickle object types that it cannot\n",
-      "map directly to c-types [inferred_type->mixed,key->block1_values] [items->['EXAMDATE', 'EXAMNAME', 'PATID', 'ORDERFROM', 'ORDERDEPT', 'WARD', 'CONFIRMDR', 'BODYPART', 'MACHINEID', 'FINDINGS', 'IMPRESSIONS']]\n",
-      "\n",
-      "  return pytables.to_hdf(path_or_buf, key, self, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subset_ct = femh_ct.sample(5000)\n",
     "subset_ct.to_hdf(os.path.join(DATASTORE, 'store.h5'), '/subset_ct')"
