Retrieve PATID, EXAMDATE

--- a/aortic_aneurysm.ipynb
+++ b/aortic_aneurysm.ipynb
@@ -361,6 +361,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Retrieve patient's ID and date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = subset.merge(taa_dissection, 'right', left_index=True, right_index=True)[['PATID', 'EXAMDATE', 'label']]\n",
+    "label.to_csv('data/nlp_joined_dissection_aneurysm.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
