--- a/femh_subset.ipynb
+++ b/femh_subset.ipynb
@@ -68,6 +68,7 @@
    "outputs": [],
    "source": [
     "subset = femh.sample(10000, random_state=0)\n",
+    "subset = subset.fillna('')\n",
     "subset.to_hdf(os.path.join(DATASTORE, 'store.h5'), '/subset')"
    ]
   },
@@ -104,7 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "femh_ct = pd.read_csv(os.path.join(FULL_DATASTORE, 'Chest CT 母體new2 2012-20180620.csv'), index_col=0, encoding='cp950')"
+    "femh_ct = pd.read_csv(os.path.join(FULL_DATASTORE, 'Chest CT 母體new2 2012-20180620.csv'), index_col=0, encoding='cp950')\n",
+    "femh_ct = femh_ct.fillna('')"
    ]
   },
   {
